--- a/js/index.html
+++ b/js/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Justso Content Administration</title>
+    <title>JustTexts - Text Administration</title>
     <link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/vendor/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/vendor/justso/justtexts/js/justso.css" rel="stylesheet">
@@ -16,8 +16,8 @@
             <div class="navbar-header">
                 <a class="navbar-brand">Justso Content Admin</a>
             </div>
-            <div class="pull-right">
-                <button class="btn" id="flush">Flush Cache</button>
+            <div class="pull-right" id="language-switch-container">
+                <select class="form-control" id="language-switch"></select>
             </div>
         </div>
     </div>
@@ -38,6 +38,7 @@
                 <li class="list-group-item panel-heading">
                     <span class="name">Indentifier</span>
                     <span class="content">Content</span>
+                    <span class="basecontent">BaseContent</span>
                 </li>
             </ul>
             <button class="btn" id="add-new-text"><span class="glyphicon glyphicon-plus"></span>Add Text</button>
