Optimized display of long page lists (page list scrolls alone)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="content">
         <div id="page-list-container">
             <ul id="pages" class="list-group panel panel-default">
                 <li class="list-group-item panel-heading">
